# GenSolver

./: .gitignore  CMakeLists.txt  Doxyfile  cmake_install.cmake  gensolver.spec  release
cmake_modules/: FindFlexPars.cmake  cmake_uninstall.cmake
include/: genutil.h  libgensolver.h  libgensolver.ipp  libnetsolver.h  libnnet.h  librand.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  libgensolver.cpp  libgensolver.so.0.2  libnetsolver.cpp  libnnet.cpp  librand.cpp
